# telink-dev

apps/: makefile
apps/blink/: CMakeCache.txt  cmake_install.cmake  main.c  makefile  project.mk  sources.mk
apps/blink-make/: main.c  makefile  project.mk
apps/cmake-test-blink/: CMakeLists.txt  Makefile
apps/hci/: project.mk
components/boot/8251/: boot.mk
components/boot/8253/: boot.mk
components/boot/8258/: boot.mk
toolchains/tc32/: tc32_toolchain.cmake
